# ETS2-Autopilot

./: .gitignore  BUILD.md  ETS2Autopilot.scs  README.md  fix_dependencies.ps1  install.ps1  test_setup.ps1
.github/workflows/: release.yml
AutopilotApp/: App.xaml  App.xaml.cs  AutopilotApp.csproj  app.manifest
AutopilotApp/Core/: AutopilotEngine.cs  PidController.cs  TelemetryReader.cs
AutopilotApp/Input/: VJoyOutput.cs
AutopilotApp/UI/: MainWindow.xaml  MainWindow.xaml.cs
plugin/: CMakeLists.txt
plugin/include/: scssdk.h  scssdk_telemetry.h
plugin/src/: autopilot_plugin.cpp
workshop_mod/: manifest.sii
